--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@azure/cognitiveservices-computervision": "^8.2.0",
     "async": "^3.2.4",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0"
   }
 }
